# block-mat-test-code

./: CMakeLists.txt
src/: CMakeLists.txt  band_test.f90  blk_band_test.f90  dget_test.f90  lu_test.f90  main_program.f90  set_precision.f90  tridiag_test.f90
src/constants/: CMakeLists.txt  set_constants.f90
src/functions/: CMakeLists.txt  matrix_operations.f90
src/types/: CMakeLists.txt
